--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@
 
 # Site
 title: 瓶先生
-subtitle:
+subtitle: Mr-Ping Site
 description: 记录、分享Python后端技术
 author: mr-ping
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
-language: en
+language: zh-Hans
 date_format: '%Y-%m-%d'
 
 # URL
@@ -151,9 +151,9 @@ menu_icons:
 # ---------------------------------------------------------------
 
 # Schemes
-scheme: Muse
+#scheme: Muse
 #scheme: Mist
-#scheme: Pisces
+scheme: Pisces
 
 
 # ---------------------------------------------------------------
