--- a/_config.yml
+++ b/_config.yml
@@ -119,11 +119,12 @@ index_with_subtitle: false
 menu:
   home: /
   #categories: /categories/
-  #about: /about/
+  about: /about/
   archives: /archives/
-  tags: /tags/
+  #tags: /tags/
   #sitemap: /sitemap.xml
   #commonweal: /404.html
+  rabbitmqcn: http://rabbitmq.mr-ping.com
 
 
 # Enable/Disable menu icons.
@@ -142,6 +143,7 @@ menu_icons:
   archives: archive
   sitemap: sitemap
   commonweal: heartbeat
+  rabbitmqcn: link
 
 
 
