--- a/_config.yml
+++ b/_config.yml
@@ -118,12 +118,12 @@ index_with_subtitle: false
 # When running the site in a subdirectory (e.g. domain.tld/blog), remove the leading slash (/archives -> archives)
 menu:
   home: /
-  #categories: /categories/
-  about: /about/
+  categories: /categories/
   archives: /archives/
-  #tags: /tags/
+  tags: /tags/
   #sitemap: /sitemap.xml
   #commonweal: /404.html
+  about: /about/
   rabbitmqcn: http://rabbitmq.mr-ping.com
 
 
@@ -154,8 +154,8 @@ menu_icons:
 
 # Schemes
 #scheme: Muse
-#scheme: Mist
-scheme: Pisces
+scheme: Mist
+#scheme: Pisces
 
 
 # ---------------------------------------------------------------
